<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.franktan.multithreadingblogs.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg_1"
            android:text="@string/msg_1_handler_thread"
            android:onClick="sendMsg1ToHandlerThread"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg_2"
            android:text="@string/msg_2_handler_thread"
            android:onClick="sendMsg2ToHandlerThread"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg_3"
            android:text="@string/msg_3_thread_pool"
            android:onClick="send3tasksToThreadPool"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg_4"
            android:text="@string/msg_4_thread_pool"
            android:onClick="send4TasksToThreadPool"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg_5"
            android:text="@string/msg_5_thread_pool"
            android:onClick="scheduleTasksIn5Sec"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg_6"
            android:text="@string/msg_6_thread_pool"
            android:onClick="scheduleTaskEverySec"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg_7"
            android:text="@string/msg_7_thread_pool"
            android:onClick="clearQueueOfThreadPool"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/clear"
            android:text="@string/clearDisplay"
            android:onClick="clearDisplay"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/display" />
    </LinearLayout>
</ScrollView>